--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+    
+    <img class="asteroid" src="img/asteroid.svg" alt="">  
 
 </body>
 </html>
