--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <img class="asteroid" src="img/asteroid.svg" alt="">  
+    <img class="asteroid" src="img/asteroid.svg" alt="asteroid floating in space">  
 
 </body>
 </html>
