--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Animations</title>
+<link href="css/grid.css" rel="stylesheet">
+<link href="css/type.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
