--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
+    <div class="stars"></div>
+    
     <img class="asteroid" src="img/asteroid.svg" alt="asteroid floating in space">  
+    <img class="star-destroyer" src="img/ship.svg" alt=" star-destroyer">
 
 </body>
 </html>
