--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="stars"></div>
     
     <img class="asteroid" src="img/asteroid.svg" alt="asteroid floating in space">  
-    <img class="star-destroyer" src="img/ship.svg" alt=" star-destroyer">
+    <img class="ship" src="img/ship.svg" alt=" star-destroyer">
 
 </body>
 </html>
